# Cryptocurrency-Prediction-API

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
models/: meta.json
