[project]
name = "eth-nextday-api"
version = "0.1.0"
description = "FastAPI service for ETH next-day HIGH prediction"
requires-python = ">=3.11"
dependencies = [
  "fastapi (==0.111.0)",
  "uvicorn (==0.30.1)",
  "pandas (==2.2.2)",
  "numpy (==1.26.4)",
  "scikit-learn (==1.5.1)",
  "joblib (==1.4.2)",
  "requests (>=2.31)",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"